--- a/SealTeam6/SealTeam6.Eto/SealTeam6.EtoGUI.csproj
+++ b/SealTeam6/SealTeam6.Eto/SealTeam6.EtoGUI.csproj
@@ -37,6 +37,9 @@
       <HintPath>..\packages\Eto.Serialization.Json.2.3.0\lib\net45\Eto.Serialization.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FluentFTP, Version=17.6.0.0, Culture=neutral, PublicKeyToken=f4af092b1d8df44f, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentFTP.17.6.0\lib\net45\FluentFTP.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -45,17 +48,22 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CredentialsInput.cs" />
     <Compile Include="FileList.cs" />
+    <Compile Include="LabelledTextInput.cs" />
     <Compile Include="LocalFileList.cs" />
     <Compile Include="MainForm.cs" />
+    <Compile Include="PasswordField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FileListItem.cs" />
+    <Compile Include="ServerLoginForm.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
