--- a/SealTeam6/SealTeam6.Eto/packages.config
+++ b/SealTeam6/SealTeam6.Eto/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Eto.Forms" version="2.3.0" targetFramework="net46" />
   <package id="Eto.Serialization.Json" version="2.3.0" targetFramework="net46" />
+  <package id="FluentFTP" version="17.6.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
 </packages>
