--- a/SealTeam6/SealTeam6.Core/SealTeam6.Core.csproj
+++ b/SealTeam6/SealTeam6.Core/SealTeam6.Core.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="SealTeam6FTP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
