--- a/SealTeam6/SealTeam6.Console/App.config
+++ b/SealTeam6/SealTeam6.Console/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+
+  <connectionStrings>
+    <add name="SealTeam6Entities" connectionString="metadata=res://*/ftpDbContext.csdl|res://*/ftpDbContext.ssdl|res://*/ftpDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IR063KN\SQLEXPRESS;initial catalog=SealTeam6;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  
 </configuration>
